@@ -18,17 +18,21 @@ name 'Plack-App-Directory-PYX';
 perl_version 5.008;
 readme_from 'PYX.pm';
 recursive_author_tests('xt');
+requires 'English' => 0;
+requires 'Error::Pure' => 0;
 requires 'Plack::App::Directory' => 0;
+requires 'Plack::Util::Accessor' => 0;
 requires 'PYX::SGML::Tags' => 0;
-requires 'Tags::Output::Indent' => 0;
 requires 'Tags::Output::Raw' => 0;
 requires 'Unicode::UTF8' => 0;
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Plack-App-Directory-PYX';
 resources 'homepage' => 'https://github.com/michal-josef-spacek/Plack-App-Directory-PYX';
 resources 'repository' => 'git://github.com/michal-josef-spacek/Plack-App-Directory-PYX';
+test_requires 'Error::Pure' => 0;
 test_requires 'File::Object' => 0;
 test_requires 'Plack::Test' => 0;
+test_requires 'Tags::Output::Indent' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
