@@ -5,7 +5,7 @@ TODO
 4. Dirindex (actually returns 'DIR' string).
 7. Is it possible to do something like this demo:
 plackup -MPlack::App::GraphEasy -e 'Plack::App::GraphEasy->new->to_app'
-8.
+9.
 
 Applied
 =======
@@ -17,3 +17,6 @@ OK [20200430] skim
 
 6. Add indent version.
 OK [20200430] skim
+
+8. Prepsat indent() na nastaveni modulu, ktery to vykresluje
+OK [20200501] skim
